# development-of-a-software-swp_cointrol

./: .gitignore  CODESTYLE.md  README.md  pyproject.toml  requirements.txt
src/coin_trol/: main.py
src/coin_trol/controller/: main_controller.py
src/coin_trol/model/: __init__.py  database.py  db_interface.py  entities.py
src/coin_trol/tests/: test_model.py
src/coin_trol/utils/: helpers.py
src/coin_trol/view/: GUI_TESTEN.py  Transaktion.py  Wallets.py  ui_dashboard.py  ui_login.py
src/coin_trol/view/GUI/: ui_login.py
src/coin_trol/view/data/: user_storage.py
